@@ -29,6 +29,7 @@
 #include "Node.h"
 #include "NodeList.h"
 #include "UnusedParam.h"
+#include <assert.h>
 
 static JSValueRef JSNode_appendChild(JSContextRef context, JSObjectRef function, JSObjectRef thisObject, size_t argumentCount, const JSValueRef arguments[], JSValueRef* exception)
 {
