@@ -25,6 +25,7 @@
  */
 
 #include "JavaScriptCore.h"
+#include "JSStringRefCF.h"
 #include "JSNode.h"
 #include <wtf/UnusedParam.h>
 
